[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulcan"
version = "0.2.0"
description = "Network traffic simulation tool for generating PCAP files from JSON descriptions"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Vulcan Contributors" }]
dependencies = [
    "scapy>=2.7.0,<3.0",
    "flask>=3.1.3,<4.0",
    "flask-cors>=6.0.0,<7.0",
    "flask-limiter~=3.8.0",
    "python-magic~=0.4.27",
    "pydantic~=2.9.0",
    "gunicorn~=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3.0",
    "pytest-cov~=5.0.0",
    "ruff~=0.6.0",
    "mypy~=1.11.0",
    "pip-audit~=2.7.0",
    "types-flask-cors",
]

[project.scripts]
vulcan = "vulcan.app:run_dev"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["vulcan*"]

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "B008",
    "RUF012",
    # Pydantic v2 evaluates annotations at runtime; ``X | Y`` is not always
    # equivalent to ``Union[X, Y]`` for our use, so allow both spellings.
    "UP007",
    "UP038",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.11"
files = ["src/vulcan"]
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
# union-attr / method-assign trip on Flask's wsgi_app slot and on the
# Optional[Any] frame fields whose runtime invariants mypy can't see.
disable_error_code = ["union-attr", "method-assign", "return-value", "operator", "attr-defined"]

[[tool.mypy.overrides]]
module = ["scapy.*", "magic"]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:scapy.*",
]
